--- a/COVID_19_Data_Visualization.ipynb
+++ b/COVID_19_Data_Visualization.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1PZe6jSawPBVH8bilDeg9JL1PMuB7gIip",
-      "authorship_tag": "ABX9TyP+hr/gqZVZRU7CfXu2LOyC",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP+hr/gqZVZRU7CfXu2LOyC"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/harigopallak45/anyname.github.io/blob/main/COVID_19_Data_Visualization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
